--- a/bin/main/templates/MyPage/MyPage.html
+++ b/bin/main/templates/MyPage/MyPage.html
@@ -11,10 +11,10 @@
 <body class="bg2ndColor">
     <div class="m-3">
         <!-- 헤더 영역 -->
-        <header th:include="Header :: header" class="container-fluid fixed-top px-5">
+        <header th:include="Header :: header" class="container-fluid fixed-top px-0">
         </header>
         
-        <div style="margin-top: 200px;" class="row">
+        <div class="row mypageMainMarginTop">
             <!-- 네비게이션 영역 -->
             <nav th:include="/Mypage/nav :: nav" class="col-lg-3 mt-5 px-5">
             </nav>
