--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -29,6 +29,6 @@ a:link{color:rgb(255, 255, 255)}
 	color: black;
 }
 
-.mypageNav {
-	margin-top: 150px;
+.mypageMainMarginTop {
+	margin-top: 100px;
 }
