--- a/src/main/resources/templates/MyPage/MyPageInterested.html
+++ b/src/main/resources/templates/MyPage/MyPageInterested.html
@@ -14,7 +14,7 @@
         <header th:include="Header :: header" class="container-fluid fixed-top px-5">
         </header>
         
-        <div class="row mypageNav">
+        <div class="row mypageMainMarginTop">
             <!-- 네비게이션 영역 -->
             <nav th:include="/Mypage/nav :: nav" class="col-lg-3 mt-5 px-5">
             </nav>
