--- a/bin/main/templates/Header.html
+++ b/bin/main/templates/Header.html
@@ -10,10 +10,10 @@
 <body>
     <header th:fragment="header">
 		<div class="p-3 row bg2ndColor mx-0">
-			<div class="col text-end h6 row">
+			<div class="col text-end h6 row px-lg-5">
 				<!-- WatCat 폰트 -->
 				<div class="col-lg-4">
-					<p class="h1 text-danger ms-3 float-start" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">WaTCaT</p>
+					<p class="h1 ms-3 float-start" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: rgb(182, 0, 55);" >WaTCaT</p>
 				</div>
 				<!-- 왼쪽정렬 메뉴 -->
 				<div class="col-lg-8 mt-2 text-white">
