--- a/src/main/resources/templates/MyPage/Mypage.html
+++ b/src/main/resources/templates/MyPage/Mypage.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg2ndColor">
     <div>
-        <!-- 헤더 영역 -->
+        <!-- 헤더 영역 test주석 -->
         <header th:include="Header :: header" class="fixed-top px-0 mx-0">
         </header>
         
