--- a/src/main/resources/templates/MyPage/Mypage.html
+++ b/src/main/resources/templates/MyPage/Mypage.html
@@ -21,7 +21,7 @@
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white">    
                 <div>
-                    마이페이지
+                    마이페이지 tes text111
                 </div>
             </main>
         </div>
