--- a/src/main/resources/templates/kobis/rank.html
+++ b/src/main/resources/templates/kobis/rank.html
@@ -2,118 +2,122 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>box office</title>
-
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet">
+<title>Kobis</title>
 
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+	integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw=="
+	crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+	crossorigin="anonymous">
 <script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-	
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+	crossorigin="anonymous"></script>
+<link rel="stylesheet" href="/css/style.css">
+<!-- <link rel="stylesheet" href="/css/jquery.datetimepicker.css" type="text/css" />
+<script type="text/javascript" src="/js/jquery.datetimepicker.js"></script> -->
+<!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+ -->
+
 <script>
-	$(document).ready(function() {
-		$("#btn-search").on("click", function() {
-			var search = $("#btn-search").val();
+            $(document).ready(() => {
+                $("#btn-search").on("click", function () {
+                    var search = $("#btn-search").val(); //클릭시 검색
+                    var date = $("#selDate").val();  //날짜 
+                    let apiCon = "/watcat/kobis/api"; //controller-api 주소
+                    var title = $("title").val(); //제목
+                    date = converDate(date); //날짜에서 '-' 제외하는 메소드
+                    
+                    var today = new Date();
+                    
+                            $.ajax({
+                				type:"POST",
+                				url:apiCon,
+                				data:{date : date},
+                				success:(response)=>{
+                				    $("#kobisList").empty();
+                				    
+                					 for(var i = 0; i < response.length; i++) { 
+                						 
+                                    var result = "<div id=\"kobisList\">";
+                                    result += "<div><b>"+response[i].movieNm+"</b></div>";
+                                    result += " <ul class=\"list-unstyled\">";
+                                    result += "<li>개봉일: <span>"+response[i].openDt+"</span></li>";
+                                    result += " <li>누적관객수: <span>"+response[i].audiAcc+"</span></li>";
+                                    result += "<li>순위: <span>"+response[i].rank+"위</span></li>";
+                                    result += "</ul>";
+                                    result += "</div>";
+                                    $("#kobisList").append(result);
+                					 }
+                             },
+                        error: function (request, error) {
+                            alert("\nmessage:" + request.responseText + "\nerror:" +error); 
+                        }
 
-			$.ajax({
-				url : "/watcat/kobis",
-				type : "GET",
-				data : search,
-				success : function(data) {
+                    });
+                });
+            });
+            
+        	function converDate(date){
+        		var temp = date.split("-");
+        		return temp.join("");
+        	}
+        	
 
-					var tbody = $("#memberTable> tbody").append(result);
-					tbody.empty();
-					for (var i = 0; i < data.length; i++) {
-						let rank = data[i]["rank"];
-						let movieNm = data[i]["movieNm"];
-						let openDt = data[i]["openDt"];
-						let audiAcc = data[i]["audiAcc"];
-					
-					
-						var result = "<tr>";
-						result += "<td>" + {rank} + "</td>";
-						result += "<td>" + {movieNm} + "</td>";
-						result += "<td>" + {openDt} + "</td>";
-						result += "<td>" + {audiAcc} + "</td>";
-						result += "</tr>";
+        	$(document).ready(function(){
+        			$('#selDate').datetimepicker({
+        				  lang:'ko',
+        				  timepicker:false,
+        				  /* format:'Y-m-d', */
+        				  minDate: new Date
+        			});
+        		});
+        </script>
 
-						tbody.append(result);
-					}
-				},
-			     error:function(request,status,error){
-			         log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
-			        }
-
-			});
-		});
-	});
-</script>
 </head>
 <body>
 
-
-		<header th:include="Header :: header"></header>
-
+	<header th:replace="Header :: header"></header>
 
 	<main class="container mt-5 border-bottom">
 		<div class="row my-3">
 			<div class="col-sm px-3">
+				<h1 class="text-center" id="title">박스오피스</h1>
 				<div class="row my-3 border-bottom"></div>
-				<table class="table table-hover table-striped text-center"
-					id="memberTable">
-					<colgroup>
-					</colgroup>
-					<thead>
-						<tr>
-							<th>순위</th>
-							<th>영화 제목</th>
-							<th>개봉일</th>
-							<th>관객수</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-						
-<!-- 							<th th:value="{boxOfficeResult.rank}"></th>
-							<th th:value="{boxOfficeResult.movieNm}"></th>
-							<th th:value="{boxOfficeResult.openDt}"></th>
-							<th th:value="{boxOfficeResult.audiAcc}"></th> -->
-						</tr>
-					</tbody>
-				</table>
-				<div class="float-end">
+
+				<input type="date" class="form-control text-center" id="selDate" name="selDate">
+				<div class="float-end mt-2 ">
 					<button type="button" id="btn-search" class="btn btn-primary ">검색</button>
 				</div>
+				<br>
+				<hr class="mt-5">
+				<br>
+				<div id="kobisList" class="text-center">
+					<!-- <div id="movieTitle" th:value="${movieNm}">제목</div>
+					<ul class="list-unstyled">
+						                            <li>감독
+                                <span >감독이름</span></li>
+                            <li>출연
+                                <span>배우이름</span></li>
+                            <li>개요
+                                <span>영화 설명</span></li>
+                            <li>개요
+                                <span>영화 설명</span></li>
+					</ul> -->
+				</div>
+
 			</div>
 		</div>
 
 	</main>
 
-
-
-
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
