--- a/bin/main/templates/Header.html
+++ b/bin/main/templates/Header.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
 <body>
@@ -73,13 +74,37 @@
 					<div th:if="${session.userId != null}" class="float-end mx-1">
 						<span th:text="${session.userId}"> 님 </span>
 						<a href="#" class="headerLink">
-							<button class="btn btn-outline-light">
+							<button id="btn-logout"class="btn btn-outline-light">
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-door-open-fill" viewBox="0 0 16 16">
 								<path d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2h.5a.5.5 0 0 1 .5.5V15h-1V2zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z"/>
 								</svg>
 								로그아웃 
 							</button>
 						</a>
+						
+						<!-- 로그아웃 ajax -->
+						<input type="hidden"  id="userId" th:value="${session.userId}">
+						<input type="hidden"  id="adminPermission" value="${session.adminPermission}">
+						<script>
+							$("#btn-logout").on("click",function(){
+								
+								$.ajax({
+									url:"/login",
+									type:"delete",
+									success:function(data){
+										
+										console.log("로그아웃됨");
+										location.reload();
+										
+									},
+									error:function(request, status, error){
+										
+										console.log("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+									}
+								})
+							});
+						</script>
+							
 					</div>
 				</div>
 			</div>
