--- a/bin/main/templates/MyPage/KobisRequestInput.html
+++ b/bin/main/templates/MyPage/KobisRequestInput.html
@@ -53,7 +53,8 @@
                     success:function(data){
                         $("#btn-request").val(" 데이터 요청하기");
                         $("#btn-request").attr("disabled",false);
-                        $("#AjaxResult").text(data.ResponseNum +"개 데이터 조회");
+                        $("#AjaxResult").text(yearInfo + "년 " + monthInfo + "월 응답결과");
+                        $("#AjaxResult").append("\n" + data.ResponseNum +"개 데이터 조회");
                         $("#AjaxResult").append("\n" + data.databaseInsertSuccess + "개 Insert Success");
                         $("#AjaxResult").append("\n" + data.databaseInsertFail + "개 Insert fail");
                         btnRequest2();
