--- a/bin/main/templates/MyPage/MyPageReview.html
+++ b/bin/main/templates/MyPage/MyPageReview.html
@@ -40,18 +40,28 @@
                             <H4>'영화 검색' 페이지에서 영화를 선택 후</H4>
                             <H4>글을 작성해 주세요.</H4>
                         </div>
-                        <div>
-                            <ul class="pagination justify-content-center w-100 mx-auto pt-5">
-                                <li class="page-item" th:classappend="${reviewList.getPrePage() == 0} ? 'disabled'">
-                                <a class="page-link text-black" th:href="@{/mypage/review(pageNum=${reviewList.getPrePage()})}">Prev</a>
-                                </li>
-                                <li class="page-item" th:each="page: ${#numbers.sequence(reviewList.getNavigateFirstPage(), reviewList.getNavigateLastPage())}" th:classappend="${page == reviewList.getPageNum()} ? 'active'">
-                                <a class="page-link text-black" th:text="${page}" th:href="@{/mypage/review/(pageNum=${page})}"></a>
-                                </li>
-                                <li class="page-item" th:classappend="${reviewList.getNextPage() == 0} ? 'disabled'">
-                                <a class="page-link text-black" th:href="@{/mypage/review(pageNum=${reviewList.getNextPage()})}">Next</a>
-                                </li>
-                            </ul>
+                        <div class="row">
+                            <div class="col-6 mx-auto">
+                                <ul class="pagination justify-content-center w-100 mx-auto pt-5">
+                                    <li class="page-item" th:classappend="${reviewList.getPrePage() == 0} ? 'disabled'">
+                                    <a class="page-link text-black" th:href="@{/mypage/review(pageNum=${reviewList.getPrePage()})}">Prev</a>
+                                    </li>
+                                    <li class="page-item" th:each="page: ${#numbers.sequence(reviewList.getNavigateFirstPage(), reviewList.getNavigateLastPage())}" th:classappend="${page == reviewList.getPageNum()} ? 'active'">
+                                    <a class="page-link text-black" th:text="${page}" th:href="@{/mypage/review/(pageNum=${page})}"></a>
+                                    </li>
+                                    <li class="page-item" th:classappend="${reviewList.getNextPage() == 0} ? 'disabled'">
+                                    <a class="page-link text-black" th:href="@{/mypage/review(pageNum=${reviewList.getNextPage()})}">Next</a>
+                                    </li>
+                                </ul>
+                                <div class="row mb-5">
+                                    <div class="col-10">
+                                        <input type="text" id="inputSearch" class="w-100">
+                                    </div>
+                                    <div class="col-2">
+                                        <input type="submit" id="btnSearch" value="검색" class="w-100">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     
